--- a/assets/styles/global-style.css
+++ b/assets/styles/global-style.css
@@ -170,7 +170,7 @@ aside section {
 /* Подложка скролла в цвет фона */
 ::-webkit-scrollbar-track {
     border-radius: 4px;
-    background-color: var(--bg-primary);
+    background-color: #00000000;
 }
 
 /* Скрол цвета основного блока */
